syntax = "proto3";

package utils;

message BaseResponse {
  bool success = 1;
  string message = 2;
}
